--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,17 @@
   padding: 0;
   margin: 0;
   list-style-type: none;
-  text-decoration: none;
+  text-decoration: none !important;
   scroll-behavior: smooth;
   font-family: "Nunito Sans", sans-serif;
   transition: all 1s ease-in-out;
 }
-
+.grey {
+  color: grey;
+}
+.tombg {
+  background-color: tomato;
+}
 @media screen and (min-width: 768px) {
   .before-header {
     height: 3rem;
@@ -29,7 +34,30 @@
     background-size: cover;
     background-color: rgb(69, 67, 67);
     background-blend-mode: overlay;
-    height: 30rem;
+    height: 35rem;
+  }
+  .header {
+    position: absolute;
+    top: 3rem;
+    background-color: none;
+    margin-bottom: 3rem;
+  }
+
+  .home-wrap {
+    margin-top: 5rem !important;
+    text-decoration: none;
+  }
+  .head-right svg {
+    height: 1.5rem;
+  }
+
+  .book-btn {
+    background-color: #ed1a00;
+    outline: none;
+    color: #fff;
+  }
+  .socials svg {
+    height: 1.5rem;
   }
 }
 @media screen and (max-width: 768px) {
